<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="548dp"
        android:layout_height="998dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        app:srcCompat="@drawable/ic_fondo"
        android:contentDescription="@string/braground" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="104dp"
        android:layout_height="91dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/servi_home"
        android:textColor="#A6DA6A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextTextCorreo"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextCorreo"
        app:srcCompat="@drawable/user"
        android:contentDescription="@string/user" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/privacy"
        android:contentDescription="@string/pass" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="239dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreo"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="#FA000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_border"
        android:text="@string/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/a_n_no_tienes_cuenta"
        android:textColor="#FA000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicio" />

    <Button
        android:id="@+id/btnRegistrase"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:text="@string/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="43dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="#00000000"
        android:contentDescription="@string/btnGoogle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrase"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrase"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrase"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/showContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/ic_show_password_24dp"
        android:contentDescription="@string/ver_contrasenia" />
</androidx.constraintlayout.widget.ConstraintLayout>