<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground"
    tools:context=".RegistraseActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="548dp"
        android:layout_height="998dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        app:srcCompat="@drawable/ic_fondo"
        android:contentDescription="@string/braground" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="104dp"
        android:layout_height="91dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/servi_home"
        android:textColor="#A6DA6A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tus_datos"
        android:textColor="#0A0A0A"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />


    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="35dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/imgUser"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/imgcorreo"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/correo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pass"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/password" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/pass"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirmar_contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contrasenia"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


    <Button
        android:id="@+id/btnRegistrarDatos"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_border"
        android:text="@string/btnRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirm" />

    <Button
        android:id="@+id/btnInicioLogin"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_border"
        android:text="@string/btnInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarDatos" />

    <ImageView
        android:id="@+id/show_Contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/ic_show_password_24dp"
        android:contentDescription="@string/ver_contrasenia" />

    <ImageView
        android:id="@+id/showConfirmarContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ver_confirmar_contrasenia"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordConfirm"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordConfirm"
        app:layout_constraintTop_toTopOf="@+id/editTextPasswordConfirm"
        app:layout_constraintVertical_bias="0.315"
        app:srcCompat="@drawable/ic_show_password_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>