<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="81dp"
        android:layout_height="83dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_clean"
        android:scaleType="fitStart"
        android:src="@drawable/ic_trash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="87dp"
        android:layout_height="89dp"
        android:layout_marginTop="84dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_garden"
        android:scaleType="fitStart"
        android:src="@drawable/ic_farming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/btnlav"
        android:layout_width="95dp"
        android:layout_height="84dp"
        android:layout_marginEnd="76dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_wash"
        android:scaleType="fitStart"
        android:src="@drawable/ic_washing_machine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="25sp"
        android:text="@string/escoja_una_categoria"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:text="@string/limpieza"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:text="@string/lavander_a"
        app:layout_constraintEnd_toEndOf="@+id/btnlav"
        app:layout_constraintStart_toStartOf="@+id/btnlav"
        app:layout_constraintTop_toBottomOf="@+id/btnlav" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:text="@string/jardiner_a"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="#00000000"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/btnlav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnlav"
        app:layout_constraintVertical_bias="0.555" />


</androidx.constraintlayout.widget.ConstraintLayout>