<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground"
    tools:context=".RestablecerContraseniaActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="548dp"
        android:layout_height="998dp"
        android:contentDescription="@string/braground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/ic_fondo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="104dp"
        android:layout_height="91dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/servi_home"
        android:textColor="#A6DA6A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="53dp"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/imgcorreo"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/correo" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_border"
        android:text="@string/enviar_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>